OO-6417 Minor refactoring and extending error message